@@ -3,6 +3,8 @@
  (thanks to Scott Ellis, developing a MySpaceIM plugin for Miranda IM,
   for finding the idle status code.)
 * Time out if no data from server within a certain amount of time (keep alives).
+* Remove "Sign on as hidden" option, and always set status to current status
+  when signing on.
 
 2007-07-03 Jeff Connelly <jeff2@soc.pidgin.im> - 0.10
 * On incoming instant messages, add support for:
